Finished migration to gradle, fixed tests