@@ -1,7 +1,6 @@
 plugins { 
     id "org.springframework.boot" version "2.7.5"
     id "io.spring.dependency-management" version "1.1.0" 
-    id "io.freefair.lombok" version "6.5.1"
     id "io.freefair.maven-publish-java" version "6.5.1"
     id "com.github.kt3k.coveralls" version "2.12.0" 
     id "org.owasp.dependencycheck" version "7.3.0"
@@ -11,6 +10,8 @@ plugins {
     id 'java'
     id 'jacoco'
 }
+
+apply plugin: 'project-report'
 
 jar {
     archiveBaseName = 'wap-server'
@@ -63,16 +64,16 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-mail"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
 
-    implementation "org.springframework.security:spring-security-web:5.7.5"
-    implementation "org.springframework.security:spring-security-config:5.7.5"
+    //implementation "org.springframework.security:spring-security-web:5.7.5"
+    //implementation "org.springframework.security:spring-security-config:5.7.5"
     implementation "org.thymeleaf:thymeleaf-spring5"
 
     
     // cloud support
-    implementation "org.springframework.cloud:spring-cloud-starter-config:3.1.5"
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4"
-    implementation "org.springframework.cloud:spring-cloud-gateway-mvc:3.1.4"
-    implementation 'de.codecentric:spring-boot-admin-starter-client:2.7.10'
+    //implementation "org.springframework.cloud:spring-cloud-starter-config:3.1.5"
+    //implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4"
+   // implementation "org.springframework.cloud:spring-cloud-gateway-mvc:3.1.4"
+    //implementation 'de.codecentric:spring-boot-admin-starter-client:2.7.10'
 
     // springdoc
     implementation "org.springdoc:springdoc-openapi-ui:${springDocVersion}"
@@ -90,9 +91,13 @@ dependencies {
     implementation "org.apache.jena:apache-jena-libs:3.7.0"
     implementation "org.apache.jena:jena-fuseki:3.7.0"
     implementation "org.apache.jena:jena-fuseki-embedded:3.7.0"
+    implementation 'org.apache.jena:jena-osgi:3.7.0'
 
     implementation "org.apache.commons:commons-rdf-api:0.5.0"
-    implementation "org.apache.commons:commons-rdf-jena:0.5.0"
+    implementation "org.apache.thrift:libthrift:0.12.0"
+    implementation("org.apache.commons:commons-rdf-jena:0.5.0"){
+        exclude group: 'org.apache.jena', module: 'jena-osgi'
+    }        
     implementation "org.apache.commons:commons-rdf-jsonld-java:0.5.0"
     implementation "com.github.java-json-tools:json-schema-validator:2.2.8"
 
@@ -106,7 +111,7 @@ dependencies {
     testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc:2.0.6.RELEASE"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.springframework:spring-test"
-    testImplementation "org.springframework.security:spring-security-test"
+   // testImplementation "org.springframework.security:spring-security-test"
    
     testImplementation "org.junit.platform:junit-platform-launcher:${junitPlatformVersion}"
     testImplementation "org.junit.platform:junit-platform-engine:${junitPlatformVersion}"
@@ -117,8 +122,8 @@ dependencies {
     testImplementation "io.rest-assured:rest-assured"
 
     //Java 11 Support 
-    testImplementation "org.mockito:mockito-inline:4.9.0"
-    testImplementation "org.mockito:mockito-core:2.23.4"
+    testImplementation "org.mockito:mockito-inline:4.10.0"
+    //testImplementation "org.mockito:mockito-core:2.23.4"
     testImplementation "com.sun.xml.bind:jaxb-core:2.3.0.1"
     testImplementation "com.sun.xml.bind:jaxb-impl:2.3.0.1"
     testImplementation "javax.activation:activation:1.1.1"
@@ -132,10 +137,20 @@ if (project.hasProperty('release')) {
 }
 
 test {
+    useJUnitPlatform()
+ if (!JavaVersion.current().isJava8()) {
+        println 'Allow access to private methods...'
+        jvmArgs '--illegal-access=permit'
+    }
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+        println 'Allow access to private methods of package java.util.stream...'
+        jvmArgs '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
+   }
     testLogging {
         outputs.upToDateWhen {false}
         showStandardStreams = true
     }
+
    environment "spring.config.location", "classpath:/test-config/"
 }
 
